# yandex-disk-test

./: README.md  pyproject.toml
project/: settings.py  urls.py
project/yandex_integration/: apps.py  forms.py  integration.py  urls.py  views.py
project/yandex_integration/templates/: main_page.html
