[tool.poetry]
name = "yandex-disk-test"
version = "0.1.0"
description = ""
authors = ["El'dar <vershinineldar@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "3.0.14"
djangorestframework = "3.11.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
